# pinocchio

./: .gitignore  BUILD_STATUS.md  CMakeLists.txt  WINDOWS_BUILD_GUIDE.md  build_wheel_windows.bat  build_wheel_windows.ps1  install_numpy_omniverse.ps1  pyproject.toml  sources.cmake  vcpkg-configuration.json  vcpkg.json
bindings/python/: CMakeLists.txt  module.cpp  numpy_import.cpp
ports/eigenpy/: fix-jrl-cmakemodules.patch  portfile.cmake  vcpkg.json
ports/jrl-cmakemodules/: portfile.cmake  vcpkg.json
ports/python3/: portfile.cmake  vcpkg.json
venv_build/: pyvenv.cfg
venv_build/Scripts/: activate  activate.bat
